--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "type": "module",
   "engines": {
-    "node": "18.x"
-  },
+      "node": ">= 18.x",
+      "npm": ">= 9.x"
+   },
   "directories": {
     "lib": "lib",
     "src": "src",
